--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,22 +1,86 @@
-#exBodyId {
-	padding: 24px 16px 32px;
-	background-color: darkgray;
+:root {
+	--bg-color: #2a2e37;
+	--label-bg-color: #3e3e3e;
+	--save-btn-color: #f9802a;
+	--reset-btn-color: #393d48;
+	--border-color: #717171;
+	--text-color: #e5e5e5;
 }
 
-#exFormId {
+.body {
+	padding: 32px 16px 40px;
+	border-radius: 4px;
+	background-color: var(--bg-color);
+	color: var(--text-color);
+	font-family: 'Arial', sans-serif;
+}
+
+.ex-form {
 	display: grid;
+	width: 320px;
 }
 
-#exLabelId {
-	font-size: 32px;
+.ex-label {
 	margin-bottom: 16px;
+	font-size: 28px;
+	text-transform: uppercase;
+	color: var(--text-color);
 }
 
-#exInputId {
+.ex-input {
+	margin-bottom: 12px;
+	padding: 8px;
+	border: 1px solid var(--border-color);
+	border-radius: 2px;
+	background-color: var(--label-bg-color);
 	font-size: 18px;
-	margin-bottom: 24px;
+	color: inherit;
+	font-family: inherit;
+	&::placeholder {
+		color: white;
+	}
 }
 
-#exButtonId {
+.ex-btn {
+	transition: background-color 0.4s, scale 0.2s;
+	padding: 4px 16px;
+	border-radius: 2px;
+	border: none;
+	box-shadow: none;
+	color: black;
+	font-family: inherit;
+	&:active {
+		scale: 0.98;
+	}
+}
+
+.ex-btn-save {
+	background-color: var(--save-btn-color);
 	font-size: 24px;
+	&:hover {
+		background-color: color-mix(in hsl, var(--save-btn-color), black 8%);
+	}
+}
+
+.hr {
+	height: 1px;
+	width: 66%;
+	margin: 12px auto;
+	background-color: var(--border-color);
+}
+
+.ex-btn-reset {
+	background-color: var(--reset-btn-color);
+	font-size: 14px;
+	color: inherit;
+	&:hover {
+		background-color: color-mix(in hsl, var(--reset-btn-color), black 8%);
+	}
+}
+
+@media (prefers-color-scheme: light) {
+	:root {
+		--bg-color: #f9f9f9;
+		--text-color: #1c1c1c;
+	}
 }
