--- a/popup/popup.css
+++ b/popup/popup.css
@@ -8,7 +8,9 @@
 }
 
 .body {
-	padding: 32px 16px 40px;
+	margin: 0;
+	box-sizing: border-box;
+	padding: 24px 16px 40px;
 	border-radius: 4px;
 	background-color: var(--bg-color);
 	color: var(--text-color);
@@ -20,16 +22,25 @@
 	width: 320px;
 }
 
-.ex-label {
-	margin-bottom: 16px;
-	font-size: 28px;
+.ex-title {
+	margin-bottom: 40px;
+	font-size: 24px;
+	font-weight: bold;
+	text-align: center;
 	text-transform: uppercase;
+	text-wrap: balance;
+	line-height: 1.3;
+}
+
+.ex-label {
+	margin-bottom: 6px;
+	opacity: 0.8;
 	color: var(--text-color);
 }
 
 .ex-input {
-	margin-bottom: 12px;
-	padding: 8px;
+	margin-bottom: 40px;
+	padding: 10px 16px;
 	border: 1px solid var(--border-color);
 	border-radius: 2px;
 	background-color: var(--label-bg-color);
@@ -37,7 +48,7 @@
 	color: inherit;
 	font-family: inherit;
 	&::placeholder {
-		color: white;
+		color: inherit;
 	}
 }
 
@@ -62,6 +73,15 @@
 	}
 }
 
+.ex-btn-reset {
+	background-color: var(--reset-btn-color);
+	font-size: 16px;
+	color: inherit;
+	&:hover {
+		background-color: color-mix(in hsl, var(--reset-btn-color), black 8%);
+	}
+}
+
 .hr {
 	height: 1px;
 	width: 66%;
@@ -69,18 +89,12 @@
 	background-color: var(--border-color);
 }
 
-.ex-btn-reset {
-	background-color: var(--reset-btn-color);
-	font-size: 14px;
-	color: inherit;
-	&:hover {
-		background-color: color-mix(in hsl, var(--reset-btn-color), black 8%);
-	}
-}
-
 @media (prefers-color-scheme: light) {
 	:root {
-		--bg-color: #f9f9f9;
+		--bg-color: #eeeeee;
+		--label-bg-color: #ffffff;
+		--reset-btn-color: #cbccd2;
+		--border-color: #c0c0c0;
 		--text-color: #1c1c1c;
 	}
 }
